<resources>
    <string name="app_name">Nutrition Surveillance System</string>
    <string name="action_settings">Settings</string>
    <string-array name="age_array">
        <item>15-18</item>
        <item>19-24</item>
        <item>25-30</item>
        <item>30-35</item>
        <item>35-40</item>
        <item>40-45</item>
        <item>45-50</item>
        <item>50-60</item>
        <item>Above 60</item>
    </string-array>
    <string-array name="occupation">
        <item>Housewife</item>
        <item>Unskilled Prefession</item>
        <item>Skilled Profession</item>
    </string-array>
    <string name="education">Education</string>
    <string-array name="family_income">
        <item>1000-2000</item>
        <item>2000-5000</item>
        <item>5000-10,000</item>
        <item>10,000-15,000</item>
        <item>Above 15000</item>
    </string-array>
    <string-array name="death_reasons">
        <item>Select Death Reason</item>
        <item>Fever</item>
        <item>Chickenpox</item>
        <item>Malnutrition</item>
        <item>Diarrhoea</item>
        <item>Accidental Death</item>
        <item>Insect Biting</item>
        <item>Other</item>
    </string-array>
    <string name="edit">Edit</string>
    <string name="tech_partner">Technology Partner: Indev Consultancy Pvt. Ltd.</string>
    <string name="title_activity_main_menu_registration">Registration</string>
    <string name="title_activity_main_menu_monitoring">Monthly Monitoring</string>
    <string name="title_activity_activity_parent_registration">Eligible Family Registration</string>
    <string name="title_activity_activity_pregnant_women_monitoring">Pregnant Women Monitoring</string>
    <string name="title_activity_activity_pregnant_women_registration">Pregnant Women Registration</string>
    <string name="title_activity_activity_child_reg">Child Registration</string>
    <string name="title_activity_activity_synchronization">Synchronization</string>
    <string name="title_activity_activity_child_nutrition_monitor">Child Nutrition</string>
    <string name="title_activity_adolescent_girl">Adolescent Girl</string>
    <string name="title_activity_adolescent_monitoring">Adolescent Monitoring</string>
    <string name="title_activity_activity_views">Views</string>
    <string name="title_activity_activity_child_view">Child View</string>
    <string name="title_activity_activity_pregnant_women_view">Pregnant Women View</string>
    <string name="title_activity_activity_mother_view">Mother View</string>
    <string name="title_activity_activity_adl_view">Adolescent View</string>
    <string name="title_activity_show_web_view_chart">ShowWebViewChart</string>
    <string name="title_activity_user_manual">User Manual</string>
    <string name="title_activity_activity_mother_registration">Mother Registration</string>
    <string name="title_activity_preg_women_tab">Pregnant Women</string>
    <string name="title_activity_activity__exiting__mother">Activity_Existing_Mother</string>
    <string name="get_iron_tablet">Do you get Iron tablets from the Govt. Anganwadi centre Or Govt. Schools or Govt. Hospital/Primary Health Centre?</string>
    <string name="whenStartFood">When should we start nutritionally-adequate and safe complementary (solid) foods, after the child completes:</string>
    <string name="iron_tablet_from_govt">Do you get Iron Tablets from the Govt. anganwadi centre or Govt. school or Hospital?</string>
    <string name="title_activity_sam_calculator">SAM Calculator</string>
    <string name="Red">Bellow Normal</string>
    <string name="green">Normal</string>
    <string name="obese">Obese</string>
    <string name="under_weight_calculator">Under Weight Calculator</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="save_the_children">Save the Children</string>
    <string name="nutrition_monittoring">Nutrition Monitoring System</string>
    <string name="events_or_meetings">Events or Meetings</string>
    <string name="severe_anaemia">Severe anaemia (Hb level &#x3c; 7 gms. &#x25;)</string>
    <string name="high_bp_systolic_140_and_or_diastolic_90_mm_hg">High BP (systolic &#x2265; 140 and or diastolic &#x2265; 90 mm Hg)</string>
    <string name="nutrition_monitoring_system">Nutrition Surveillance System</string>
    <string name="welcome_to_loginpage">Welcome to Login Page</string>
    <string name="date_of_screening">Date of Screening</string>
    <string name="registered_with_icds">Registered with ICDS</string>
    <string name="health_facility">Health Facility</string>
    <string name="provision_of_edima_and_its_type">Type of edema</string>
    <string name="link_with_medical_facilities">Has the child accessed any health services for this sickness?</string>
    <string name="edema_information">Edema Information</string>
    <string name="edema_info_description">Edema is swelling caused by excess fluid trapped in your body\'s tissues. Although edema can affect any part of your body, you may notice it more in your hands, arms, feet, ankles and legs.</string>
    <string name="Please_enter_valid_agemonth">Please enter age in month</string>
    <string name="Please_enter_valid_dob">Please choose date of birth</string>
    <string name="utility">Utility</string>
    <string name="grain">" Grain: Grains, roots and tubers (all cereals such as rice, wheat, bread, noodles, porridge which are made from grain, roots and tubers like potato, white yam, sweet potato)"</string>
    <string name="dal">Dal: Pulses and lentils (Any food made from Dal of all kind, beans, peas, and lentils)</string>
    <string name="milk_related">" Milk related: (excluding mother’s milk)- Animal milk, Yogurt, Paneer, Cheese, Curd, Infant formula, canned/ powdered milk"</string>
    <string name="eggs">Eggs</string>
    <string name="flesh_food">Flesh food: Meat, fish, chicken, Liver, Kidney or any organ meat, beef, pork, lamb, sea food</string>
    <string name="vit_a_rich_fruits_and_vegetables">Vit-A rich fruits and vegetables: Pumpkin, carrots, squash or sweet potatoes that are yellow or orange inside, any dark green vegetables, ripe mangos, ripe papaya, musk melon</string>
    <string name="other_fruits_and_vegetables">Other fruits and vegetables</string>
    <string name="scan_aadhaar">Scan Aadhaar</string>
    <string name="number_of_family_members">Number of Family Members</string>
    <string name="water_quality">Water Quality</string>
    <string name="bpl_card_holder">BPL Card Holder</string>
    <string name="yes">YES</string>
    <string name="add_mother_by_clicking_on_add_mother_button">Add mother by clicking on add mother button.</string>
    <string name="name_of_the_mother">Name of the Mother</string>
    <string name="age">Age</string>
    <string name="no">No</string>
    <string name="take_image">Take Image</string>
    <string name="marital_status">Marital Status</string>
    <string name="add_mother">Add Mother</string>
    <string name="completed_pregnancy_months">Completed Pregnancy Months</string>
    <string name="lmp_edd_date">LMP / EDD Date</string>
    <string name="completed_months_of_pregnancy">Completed months of Pregnancy</string>
    <string name="getting_food_supplements_from_icds">Getting food supplements from ICDS</string>
    <string name="regular">Regular</string>
    <string name="irregular">Irregular</string>
    <string name="not_taken">Not taken</string>
    <string name="image">Image</string>
    <string name="select_household_id">Select Household Id</string>
    <string name="pregnancy_status">Pregnancy Status</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="abortion">Abortion</string>
    <string name="abortion_date">Abortion Date</string>
    <string name="miscarriage">Miscarriage</string>
    <string name="death_date">Death Date</string>
    <string name="child_delivery_type">Child Delivery Type</string>
    <string name="muac_mid_upper_arm_circumference_in_cms">MUAC (Mid-Upper Arm Circumference) - in Cms</string>
    <string name="week_of_pregnancy">Week of Pregnancy</string>
    <string name="bmi">BMI</string>
    <string name="night_blindness">Night Blindness</string>
    <string name="could_not_assist">Could Not Assist</string>
    <string name="iodine_deficiency_visible_goitre">Iodine Deficiency (Visible Goitre)</string>
    <string name="fluorosis_skeletal_fluorosis">Fluorosis (Skeletal Fluorosis)</string>
    <string name="visit_sequence">Visit Sequence</string>
    <string name="first_visit">First visit</string>
    <string name="second_visit">Second visit</string>
    <string name="random">Random</string>
    <string name="convulsions">Convulsions</string>
    <string name="vaginal_bleeding">Vaginal bleeding</string>
    <string name="foul_smelling_vaginal_discharge">Foul smelling vaginal discharge</string>
    <string name="diabetes">Diabetes</string>
    <string name="twins">Twins</string>
    <string name="date_of_delivery">Date of Delivery</string>
    <string name="date_of_abortion">Date of Abortion</string>
    <string name="place_of_delivery">Place of Delivery</string>
    <string name="birth_weight_of_child">Birth Weight of Child</string>
    <string name="weight_gain_till_last_monitoring_n_a">Weight gain till last monitoring : N/A</string>
    <string name="age_in_completed_year">Age in completed year</string>
    <string name="dob">DOB</string>
    <string name="sex">Sex</string>
    <string name="Gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="have_you_do_access_any_icds">Have you access any services from ICDS?</string>
    <string name="have_you_received_ifa_in_the_last_month">Have you received IFA in the last month?</string>
    <string name="have_you_taken_last_week">Have you received IFA in the last week?</string>
    <string name="have_you_received_deworming_tablet_in_last_6_months">Have you received deworming tablet in last 6 months?</string>
    <string name="have_you_received_any_counselling_or_health_service_related_to_menstrual_hygiene_or_sexual_health">Have you received any counselling or health service related to menstrual hygiene or Sexual health?</string>
    <string name="not_needed">Not Needed</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="congenital_chronic_condition">Congenital/ Chronic condition</string>
    <string name="thyroid">Thyroid</string>
    <string name="asthma">Asthma</string>
    <string name="bronchiectasis">Bronchiectasis</string>
    <string name="heart_disease">Heart disease</string>
    <string name="gynec">Gynec</string>
    <string name="others">Others</string>
    <string name="house_2hold_id">House 2Hold Id</string>
    <string name="submit">Submit</string>
    <string name="adolescent_girl">Adolescent Girl</string>
    <string name="child_registration">Child Registration</string>
    <string name="pregnant_women_monitoring">Pregnant Women Monitoring</string>
    <string name="child_nutrition_monitoring">Child Nutrition Monitoring</string>
    <string name="adolescent_monitoring">Adolescent Monitoring</string>
    <string name="ok">Ok</string>
    <string name="family">Family</string>
    <string name="grains">Grains</string>
    <string name="egg">Egg</string>
    <string name="dals">Dal</string>
    <string name="vit_a_rich_fruits_and_vegetable">Vit-A rich fruits and vegetables</string>
    <string name="flesh_foods">Flesh Food</string>
    <string name="milk_relatd">Milk related</string>
    <string name="other_fruits_and_vegetable">Other fruits and vegetables</string>
    <string name="mother">Mother</string>
    <string name="mother_and_pregnant_women">Mother and Pregnant Women</string>
    <string name="garden_setup">Are the nutritoin garden setup done?</string>
    <string name="Are_the_active">Are the active?</string>
</resources>