<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".NewCode.SuposhanSakhiMonitoring">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_garden_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/garden_setup"
            android:textColor="@color/black"
            android:textSize="14dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg_garden"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/yes"/>
                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/no" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/Are_the_active"
            android:textColor="@color/black"
            android:textSize="14dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg_active"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_active_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/yes"/>
                <RadioButton
                    android:id="@+id/rb_active_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/no" />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_margin="20dp"
            android:layout_gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_suposhan_submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/submitbutton"
                android:text="@string/submit"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textAllCaps="false"
                android:padding="10dp"
                android:layout_marginHorizontal="5dp"
                android:textColor="#FFF"
                android:textSize="15dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>