<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_dialog_background"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

    <LinearLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grains"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tv_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grains"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_below="@+id/ivInfo"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eggs"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egg"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_below="@+id/ivInfo"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/daal"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dals"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_below="@+id/ivInfo"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fruits"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vit_a_rich_fruits_and_vegetable"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_below="@+id/ivInfo"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flesh_food"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flesh_foods"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"

                android:textColor="@color/black"
                android:layout_below="@+id/ivInfo"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/milk_products"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk_relatd"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"

                android:textColor="@color/black"
                android:layout_below="@+id/ivInfo"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vegetables"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_fruits_and_vegetable"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_below="@+id/ivInfo"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_below="@+id/tv_info_title"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_ok_background"
            android:layout_below="@+id/tv_description"
            android:layout_centerHorizontal="true"
            />
    </LinearLayout>

</LinearLayout>